--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "homepage": "https://github.com/JosueMixalis/guia-hoteles#readme",
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1"
   }
 }
