--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "front",
   "version": "1.0.0",
-  "description": "\"\u001b[D\"Nuestro primer poyecto Node js\"",
+  "description": "Nuestro primer poyecto Node js",
   "main": "index.html",
   "scripts": {
     "dev": "lite-server",
