--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "main": "index.html",
   "scripts": {
     "dev": "lite-server",
+    "start": "concurrently \"npm run watch:scss\" \"npm run dev \"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "sass --watch css/:css/"
+    "scss": "sass --watch css/:css/",
+    "watch:scss": "onchange 'css/*.scss' -- npm run scss",
+    "clean": "rimraf dist",
+    "imagemin": "imagemin images/* --out-dir dist/images ",
+    "usemin": "usemin index.html -d dist --htmlmin -o dist/index.html && usemin about.html -d dist --htmlmin -o dist/about.html && usemin precios.html -d dist --htmlmin -o dist/precios.html && usemin contacto.html -d dist --htmlmin -o dist/contacto.html",
+    "build": "npm run clean && npm run scss && npm run imagemin && npm run usemin"
   },
   "repository": {
     "type": "git",
@@ -19,11 +25,16 @@
   },
   "homepage": "https://github.com/JosueMixalis/guia-hoteles#readme",
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "lite-server": "^2.6.1",
-    "sass": "^1.70.0"
+    "onchange": "^7.1.0",
+    "rimraf": "^5.0.5",
+    "sass": "^1.70.0",
+    "usemin": "^0.6.0"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "concurrently": "^8.2.2",
     "jquery": "^3.7.1",
     "open-iconic": "^1.1.1",
     "popper.js": "^1.16.1"
