--- a/package.json
+++ b/package.json
@@ -26,10 +26,24 @@
   "homepage": "https://github.com/JosueMixalis/guia-hoteles#readme",
   "devDependencies": {
     "copyfiles": "^2.4.1",
+    "grunt": "^1.6.1",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-contrib-concat": "^2.1.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^5.0.0",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "grunt-contrib-sass": "^2.0.0",
+    "grunt-contrib-uglify": "^5.2.2",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-filerev": "^2.3.1",
+    "grunt-usemin": "^3.1.1",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.6.1",
     "onchange": "^7.1.0",
     "rimraf": "^5.0.5",
     "sass": "^1.70.0",
+    "time-grunt": "^2.0.0",
     "usemin": "^0.6.0"
   },
   "dependencies": {
