--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "homepage": "https://github.com/JosueMixalis/guia-hoteles#readme",
   "devDependencies": {
+    "browser-sync": "^3.0.2",
     "copyfiles": "^2.4.1",
+    "del": "^7.1.0",
     "grunt": "^1.6.1",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-clean": "^2.0.1",
@@ -38,6 +40,15 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-filerev": "^2.3.1",
     "grunt-usemin": "^3.1.1",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-flatmap": "^1.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^9.0.0",
+    "gulp-rev": "^11.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-usemin": "^0.3.30",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.6.1",
     "onchange": "^7.1.0",
